# 5.7.2
- Removed old package vignette `sdc_guidelines`
- Fix warnings with clang-devel related targeted record swapping
- Fix a note in vignette title for TRS
- Remove travis and use Github workflows to check the package

# 5.7.1
- Bugfix in `extractManipData()` with only a single categorical variable, thx @tamertemizer for reporting
- Feature: added new function `recordSwap()` that implements TRS (targeted record swapping)
- Allow to change fixed threshold for undo-feature (`undolast()`) using env-var `sdcMicro_maxsize_undo`

# 5.6.1
- various fixes in `sdcApp()`, e. g:
   * pram (expert) button is now shown again
   * kAnon correctly shows button
- additional data-utility / information-loss measures `IL_correl()` and `IL_variables()`
- fix in `addGhostVars()` that now correctly initializes `@manipGhostVars`
- fix order in `microaggregationGower()`

# 5.6.0
- fix for changes in the base R function order/sort in R 4.1.0

# 5.5.2
- write intermediate files to temp-directory in `rmarkdown::render()` to fix possible deployment problems with rsconnect when using `report()`
- bugfix in `pram()`
- bugfix in `dRisk()`
- updates when reading foreign-file formats into `sdcApp()`

# 5.5.1
- bug in modRisk when the levels of a variable in the formulaM is greater than 10 (solved). Thanks to Ying Chen for the solution.
- Adding default comment.char parameter for csv imports (thx @leebrian)

# 5.5.0
- gcc problems solved

# 5.4.1
- nothing new, but shiny did no longer export a specific function, so we resolved a warning

# 5.4.1
- valTable now also works for additive noise methods and swapping
- updates to imports
- small fixes and updates in `sdcApp`

# 5.3.0
- Add versions for Stata export
- add parameter `shiny.server` to `sdcApp` (to make it easily possible to run the app on a shiny server)
- fixes due to new data.table version
- improvements in sdcApp()

# 5.2.0
- improvements in sdcApp()
- updating dependencies due to new version of package car